# agent

./: .env.example  .gitignore  README.md  bot_consumer.py  bot_producer.py  consumer.py  file_tools.py  file_tools_schma.py  main.py  producers.py  pyproject.toml  queue_utils.py  system_prompt.md  test_tmux_tools.py  tmux_tools.py  tmux_tools_back.py  tmux_tools_schema.py  tools.py
memory/: README.md
my_project/: calculator.py  pyproject.toml
